--- a/Code/mulitithread/pom.xml
+++ b/Code/mulitithread/pom.xml
@@ -7,8 +7,20 @@
     <groupId>org.banana</groupId>
     <artifactId>muliti-thread</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
-<dependencies>
+    <dependencies>
     <!-- guava 工具包 -->
     <dependency>
         <groupId>com.google.guava</groupId>
