测试代码提交

--- a/Code/mulitithread/pom.xml
+++ b/Code/mulitithread/pom.xml
@@ -21,11 +21,22 @@
     </build>
 
     <dependencies>
-    <!-- guava 工具包 -->
-    <dependency>
-        <groupId>com.google.guava</groupId>
-        <artifactId>guava</artifactId>
-        <version>18.0</version>
-    </dependency>
-</dependencies>
+        <!-- guava 工具包 -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.7</version>
+            <scope>runtime</scope>
+        </dependency>
+    </dependencies>
 </project>
