--- a/Code/mulitithread/pom.xml
+++ b/Code/mulitithread/pom.xml
@@ -21,6 +21,11 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.8.0</version>
+        </dependency>
         <!-- guava 工具包 -->
         <dependency>
             <groupId>com.google.guava</groupId>
