--- a/Code/mulitithread/pom.xml
+++ b/Code/mulitithread/pom.xml
@@ -38,6 +38,11 @@
             <version>1.7.25</version>
         </dependency>
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+        </dependency>
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.1.7</version>
